--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
 
     <uses-sdk tools:overrideLibrary="jp.wasabeef.glide.transformations" />
 
-    <uses-permission android:name="android.permission.INTERNET" /> <!-- Android 9.0 前台权限 -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /><!-- Android 9.0 前台权限 -->
 
     <application
         android:name=".application.MyApplication"
